Remove guava and use java8 constructs